<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Info">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:background="@drawable/cov"
                tools:layout_editor_absoluteX="130dp"
                tools:layout_editor_absoluteY="38dp"
                tools:srcCompat="@tools:sample/avatars" />
            <TextView
                android:id="@+id/header1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/colorPrimary"
                tools:layout_editor_absoluteX="152dp"
                tools:layout_editor_absoluteY="213dp" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t2"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorGrey"
                 />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t3"
                tools:layout_editor_absoluteX="152dp"
                android:textColor="@color/colorGrey"
                android:layout_marginTop="20dp"
                tools:layout_editor_absoluteY="213dp" />

            <TextView
            android:id="@+id/header2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/t4"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
             />

            <TextView
                android:id="@+id/header3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/t5"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textColor="@color/colorGrey" />


        </LinearLayout>
    </ScrollView>

</ScrollView>